<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    android:background="@drawable/bg_mesa">

    <TextView
        android:id="@+id/txtNumeroMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mesa_1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtEstadoMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libre"
        android:textSize="14sp"
        android:layout_marginTop="6dp"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnNuevoPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_pedido"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>
</LinearLayout>
