<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_background"
            android:contentDescription="@string/boton_atras"
            android:minHeight="48dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entradas"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/layout_entradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platos_principales"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/layout_principales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bebidas"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/layout_bebidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>
</ScrollView>